syntax = "proto3";
package msgData;

message msgHead
{
    string msgName = 1;
}